// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorIndicator matches snapshot (checked) 1`] = `
.c1 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c3 {
  display: none;
}

.c5 {
  display: none;
  position: absolute;
  height: 2.8rem;
  width: 2.8rem;
  background-color: transparent;
  z-index: -1;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
}

.c6 {
  height: 2.1999999999999997rem;
  width: 2.1999999999999997rem;
  background-color: transparent;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  border: 1px solid #fed200;
}

.c7 .c2 {
  height: 1.6rem;
  width: 1.6rem;
}

.c7 input:focus + .c4 {
  display: block;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  z-index: 1;
}

.c0 {
  position: relative;
  background-color: #ffff8a;
  border: 1px solid #8f7700;
  height: 2.4rem;
  width: 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2rem;
  overflow: visible;
}

.c0 .c2 {
  height: 1.6rem;
  width: 1.6rem;
  color: #fed200;
  stroke: #8f7700;
  stroke-width: 5%;
  display: block;
}

.c0 input:focus + .c4 {
  display: block;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  z-index: 1;
}

<div
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2 c3"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="c4 c5"
    style={
      Object {
        "focusBorder": "#8f7700",
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
  <span
    className="c6"
    style={
      Object {
        "focusBorder": "#8f7700",
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;

exports[`ColorIndicator matches snapshot 1`] = `
.c1 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c3 {
  display: none;
}

.c5 {
  display: none;
  position: absolute;
  height: 2.8rem;
  width: 2.8rem;
  background-color: transparent;
  z-index: -1;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
}

.c6 {
  height: 2.1999999999999997rem;
  width: 2.1999999999999997rem;
  background-color: transparent;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  border-radius: 50%;
  border: 1px solid #fed200;
}

.c0 {
  position: relative;
  background-color: #ffff8a;
  border: 1px solid #8f7700;
  height: 2.4rem;
  width: 2.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2rem;
  overflow: visible;
}

.c0 .c2 {
  height: 1.6rem;
  width: 1.6rem;
}

.c0 input:focus + .c4 {
  display: block;
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  z-index: 1;
}

<div
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2 c3"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
    />
  </svg>
  <span
    className="c4 c5"
    style={
      Object {
        "focusBorder": "#8f7700",
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
  <span
    className="c6"
    style={
      Object {
        "focusBorder": "#8f7700",
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;
